tests/semantic_analysis/error/structCondition.c
structCondition.c:8:5: error:.*